--- a/css/style.css
+++ b/css/style.css
@@ -89,43 +89,95 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.wrapper {
-  padding: 100px;
+.content {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  padding: 40px 15px;
+  width: 100%;
+  max-width: 1000px;
+  gap: 40px;
+}
+
+.content__title {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 32px;
+}
+
+.categories {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
 }
 
-.file-upload {
+.category {
   position: relative;
+  padding: 10px 15px;
+  border-radius: 20px;
+  border: 1px solid transparent;
   display: inline-flex;
   align-items: center;
-  gap: 10px;
+  gap: 8px;
+  background-color: #f5f5f5;
+  transition: background-color 0.3s;
   cursor: pointer;
 }
 
-.file-upload__input {
-  position: absolute;
-  opacity: 0;
+.category::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  background-color: var(--color);
+  flex-shrink: 0;
 }
 
-.file-upload__input:focus + .file-upload__button {
-  outline: 2px solid #007bff;
-  outline-offset: 2px;
+.category:hover,
+.category.category--active {
+  background-color: #e0e0e0;
+  border: 1px solid var(--color);
 }
 
-.file-upload__button {
+.chart-container {
   position: relative;
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: #fff;
-  background-color: #007bff;
-  cursor: pointer;
-  font-weight: 500;
+  width: 240px;
+  height: 240px;
 }
 
-.file-upload__label {
-  padding-left: 10px;
-  font-size: 16px;
-  color: #555;
+.center-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  text-align: center;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.center-text span {
+  display: block;
+  font-size: 14px;
+  font-weight: 400;
+  color: #aaa;
+  margin-top: 6px;
+}
+
+.slice {
+  transform-origin: 50% 50%;
+  stroke: var(--color);
+  cursor: pointer;
+  transform: scale 0.3s, stroke-width 0.3s;
+}
+
+.slice:hover,
+.slice.slice--active {
+  scale: 1.05;
+  stroke-width: 25px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
 }
