--- a/css/style.css
+++ b/css/style.css
@@ -85,99 +85,78 @@
 }
 
 body {
-  margin: 0;
   font-family: "Inter", sans-serif;
-}
-
-.content {
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  padding: 40px 15px;
-  width: 100%;
-  max-width: 1000px;
-  gap: 40px;
-}
-
-.content__title {
   margin: 0;
-  margin-bottom: 20px;
-  font-size: 32px;
+  padding: 50px;
+  background-color: beige;
 }
 
-.categories {
+.progress-bar {
+  --progress: 50%;
+  --size: 150px;
+  --bar-width: 20px;
+
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.category {
-  position: relative;
-  padding: 10px 15px;
-  border-radius: 20px;
-  border: 1px solid transparent;
-  display: inline-flex;
+  justify-content: center;
   align-items: center;
-  gap: 8px;
-  background-color: #f5f5f5;
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-
-.category::before {
-  content: "";
-  width: 12px;
-  height: 12px;
+  font-size: 28px;
+  width: var(--size);
+  aspect-ratio: 1 / 1;
   border-radius: 100%;
-  background-color: var(--color);
-  flex-shrink: 0;
+  background: conic-gradient(#000, #000 var(--progress), #bfbfbf 0%);
 }
 
-.category:hover,
-.category.category--active {
-  background-color: #e0e0e0;
-  border: 1px solid var(--color);
+.progress-bar::after {
+  content: attr(data-value) "%";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  width: calc(100% - var(--bar-width));
+  aspect-ratio: 1 / 1;
+  border-radius: inherit;
 }
 
-.chart-container {
+/* var2 - progress ring */
+
+.progress-ring {
+  --size: 150px;
+  --stroke-width: 8;
+
   position: relative;
-  width: 240px;
-  height: 240px;
-}
-
-.center-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  text-align: center;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.center-text span {
+  margin: 0 auto;
   display: block;
-  font-size: 14px;
-  font-weight: 400;
-  color: #aaa;
-  margin-top: 6px;
+  width: var(--size);
+  aspect-ratio: 1 / 1;
 }
 
-.slice {
-  transform-origin: 50% 50%;
-  stroke: var(--color);
-  cursor: pointer;
-  transform: scale 0.3s, stroke-width 0.3s;
+.progress-ring::after {
+  content: attr(data-value) "%";
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+  color: #000;
 }
 
-.slice:hover,
-.slice.slice--active {
-  scale: 1.05;
-  stroke-width: 25px;
+.progress-ring__svg {
+  width: 100%;
+  height: 100%;
+  rotate: -90deg;
 }
 
-@media (max-width: 768px) {
-  .content {
-    flex-direction: column;
-  }
+.progress-ring__bg,
+.progress-ring__value {
+  fill: none;
+  stroke-width: var(--stroke-width);
+}
+
+.progress-ring__bg {
+  stroke: #bfbfbf;
+}
+
+.progress-ring__value {
+  stroke: #000;
 }
