--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,82 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
 }
+
+.tabs {
+  margin-bottom: 20px;
+}
+
+.tabs-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.tab-button {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #f1f1f1;
+  border: none;
+  border-radius: 5px;
+}
+
+.tab-button.active {
+  background-color: #007bff;
+  color: white;
+}
+
+.content {
+  margin: 0 auto;
+  padding: 20px 0;
+  max-width: 1200px;
+}
+
+@media (max-width: 1240px) {
+  .content {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    max-width: 360px;
+  }
+}
+
+.slider {
+  padding-bottom: 40px;
+}
+
+.product {
+  position: relative;
+  padding: 15px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.product_top {
+  position: relative;
+}
+
+.product__image {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.product__percent {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 4px 10px;
+  color: #fff;
+  background-color: #ef4545;
+}
+
+.product__bottom {
+  padding-top: 20px;
+}
