--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,4 @@
-
-/*
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-*/
-
-/* fonts */
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 100;
-  src: url("../fonts/inter_100.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 200;
-  src: url("../fonts/inter_200.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 300;
-  src: url("../fonts/inter_300.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/inter_400.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/inter_500.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  src: url("../fonts/inter_600.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/inter_700.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 800;
-  src: url("../fonts/inter_800.woff2") format("woff2");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 900;
-  src: url("../fonts/inter_900.woff2") format("woff2");
-}
+/* style.css */
 
 :root {
   /* --color-light: #fff;
@@ -91,5 +8,32 @@
 
 body {
   margin: 0;
+  padding: 100px 0;
   font-family: "Inter", sans-serif;
+  font-weight: 400;
+}
+
+.container {
+  max-width: 1260px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.content {
+  display: flex;
+  padding-left: max(15px, calc((100% - 1230px) / 2));
+}
+
+.left {
+  width: 490px;
+  margin-right: 30px;
+  flex-shrink: 0;
+  min-height: 398px;
+  background-color: #c4c4c4;
+}
+
+.right {
+  width: calc(100% - 490px - 30px);
+  min-height: 398px;
+  background-color: #c4c4c4;
 }
