--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,59 @@
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
+  font-weight: 400;
+  padding: 100px;
+}
+
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.menu {
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 30px;
+}
+
+.menu__item {
+  position: relative;
+}
+
+.menu__btn {
+  border: none;
+  padding: 5px 10px;
+  color: #fff;
+  background-color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.menu__btn--active {
+  background-color: crimson;
+}
+
+.dropdown {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  background-color: #333;
+  width: 200px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.dropdown--active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.dropdown__link {
+  display: block;
+  width: 100%;
+  padding: 10px 10px;
+  color: #fff;
 }
